--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "jwt-decode": "^4.0.0",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -30,8 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
+    
     "typescript": "^5"
   }
 }
